--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,50 @@
+$dark-blue: #006597;
+$light-blue: #41AADD;
+$light-gray: #D8D5E9;
+
+html,
 body {
-    background-color: aqua;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.main {
+    background-image: linear-gradient(to top, $light-blue, $dark-blue);
+    width: 100%;
+    height: 100%;
+}
+
+
+.row {
+    margin: 0 !important;
+}
+
+#search-box {
+    >div {
+        margin-top: 5% !important;
+        height: 7vh;
+        background: $light-gray;
+    }
+}
+
+#content {
+    >div {
+        background-color: $light-gray;
+        height: 50vh;
+        border-radius: 41px;
+        -webkit-border-radius: 41px;
+        -moz-border-radius: 41px;
+        -ms-border-radius: 41px;
+        -o-border-radius: 41px;
+    }
+
+    >#right-panel {
+        
+    }
+
+    margin-top: 4% !important;
+    margin-left: 2vw !important;
+    margin-right: 2vw !important;
 }
