Fix : add font to right panel city and temp

--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,11 @@ $light-blue: #41aadd;
 $light-gray: #d8d5e9;
 $light-magenta : #C2C2F9;
 
+@font-face {
+    font-family: 'A Naskh Tahrir';
+    src: url('./src/font/A_Naskh_Tahrir_Bold.ttf');
+}
+
 html,
 body {
     width: 100%;
@@ -47,6 +52,7 @@ body {
                     margin-bottom: 4%;
                     margin-top: 1%;
                     font-size: 26px;
+                    font-family: 'A Naskh Tahrir';
                 }
 
                 width: 50%;
@@ -66,6 +72,11 @@ body {
                 padding-left: 0px;
                 padding-right: 0px;
                 font-size: 63px;
+                font-family: 'A Naskh Tahrir';
+            }
+
+            .unit {
+                font-size: 43px;
             }
 
             margin-top: 5% !important;
